Refactor package structure and add game model classes
- Updated package names to follow the new structure (fr.amu.iut.bomberman).
- Added new classes: GameModelListener, Explosion, PowerUp, Bomb, Player, PlayerProfile, SoundManager, ThemeManager, and ProfileManager.
- Modified FXML files to reflect the new controller package paths.
- Updated pom.xml to use the new main class path.
- Enhanced .gitignore to include IDEA-related files.

Took 26 minutes

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>${javafx.version}</version>
+            <version>22</version>
         </dependency>
 
         <!-- JavaFX FXML -->
@@ -74,13 +74,13 @@
                 <version>0.0.8</version>
                 <configuration>
                     <!-- CORRECTION : Classe principale corrigée -->
-                    <mainClass>com.bomberman.Main</mainClass>
+                    <mainClass>fr.amu.iut.bomberman.Main</mainClass>
                 </configuration>
                 <executions>
                     <execution>
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.bomberman.Main</mainClass>
+                            <mainClass>fr.amu.iut.bomberman.Main</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
